<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="40dp"
    tools:context="com.zengo.checkout.views.fragments.InputFragment">


    <TextView
        android:id="@+id/cardNumberTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Card number"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/cardNumberEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.zengo.checkout.views.custom.CardEntry
        android:id="@+id/cardNumberEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="1111-2222-3333-4444"
        android:inputType="number|textVisiblePassword"
        android:padding="12dp"
        android:background="@drawable/edittext_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardNumberTextView" />


    <TextView
        android:id="@+id/expiryDateTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Expiry"
        android:layout_marginTop="30dp"

        app:layout_constraintTop_toBottomOf="@+id/cardNumberEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.zengo.checkout.views.custom.ExpiryEntry
        android:id="@+id/expiryDateEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="01/2020"
        android:inputType="number|textVisiblePassword"
        android:padding="12dp"
        android:background="@drawable/edittext_background"
        android:layout_marginEnd="12dp"
        app:layout_constraintEnd_toStartOf="@id/cvvEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/expiryDateTextView" />


    <TextView
        android:id="@+id/cvvTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Cvv"
        android:layout_marginTop="30dp"

        android:layout_marginStart="12dp"
        app:layout_constraintTop_toBottomOf="@+id/cardNumberEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/expiryDateEditText" />

    <EditText
        android:id="@+id/cvvEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="123"
        android:inputType="number|textVisiblePassword"
        android:padding="12dp"
        android:background="@drawable/edittext_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/expiryDateEditText"
        app:layout_constraintTop_toBottomOf="@+id/cvvTextView" />


    <Button
        android:id="@+id/button_pay"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Pay"
        android:padding="20dp"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cvvEditText" />


</androidx.constraintlayout.widget.ConstraintLayout>
